# alpha-jerry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  STATUS.md  TODO.md  pyproject.toml
AlphaJerry/: ROADMAP.md  devlog.md  pytest.ini
AlphaJerry/engine/: collector.py
AlphaJerry/tests/: test_collector.py
AlphaJerry/utils/: sw_mapper.py
docs/: brd.md  dev-guide.md  prd.md  user-guide.md
examples/: verify_collect.py
integrated_tests/: __init__.py  test_collector.py
src/alpha_jerry/: __init__.py
src/alpha_jerry/config/: industry_map.py  industry_weights.py  scoring_rules.py  settings.py
src/alpha_jerry/engine/: collector.py
src/alpha_jerry/utils/: formulas.py  helpers.py  sw_mapper.py
tests/: test_collector.py  test_formulas.py  verify_collect.py
